# umamusume-agent

./: .dockerignore  .env.template  .gitattributes  .gitignore  Dockerfile  README.md  app.py  build_character.py  docker-entrypoint.sh  main.py  pyproject.toml  readme.md  requirements.txt
.github/workflows/: deploy-pages.yml
characters/: README.md
characters/admire_vega/: config.json  reference_jp.txt  reference_zh.txt
characters/agnes_tachyon/: config.json  reference_jp.txt  reference_zh.txt
characters/almond_eye/: config.json  prompt.md  reference_jp.txt
characters/aston_machan/: config.json  prompt.md  reference_jp.txt  reference_zh.txt
characters/cheval_grand/: config.json  prompt.md  reference_jp.txt
characters/curren_bouquetdor/: config.json  prompt.md  reference_jp.txt  reference_zh.txt
characters/curren_chan/: config.json  reference_jp.txt  reference_zh.txt
characters/daiwa_scarlet/: config.json  reference_jp.txt  reference_zh.txt
characters/el_condor_pasa/: config.json  prompt.md  reference_jp.txt  reference_zh.txt
characters/fine_motion/: config.json  prompt.md  reference_jp.txt  reference_zh.txt
characters/grass_wonder/: config.json  reference_jp.txt  reference_zh.txt
characters/king_halo/: config.json  prompt.md  reference_jp.txt  reference_zh.txt
characters/kitasan_black/: config.json  prompt.md  reference_jp.txt  reference_zh.txt
characters/manhattan_cafe/: config.json  reference_jp.txt  reference_zh.txt
characters/mayano_top_gun/: config.json  reference_jp.txt  reference_zh.txt
characters/mejiro_dober/: config.json  prompt.md  reference_jp.txt  reference_zh.txt
characters/mejiro_mcqueen/: config.json  reference_jp.txt  reference_zh.txt
characters/mihono_bourbon/: config.json  prompt.md  reference_jp.txt  reference_zh.txt
characters/neo_universe/: config.json  reference_jp.txt  reference_zh.txt
characters/nice_nature/: config.json  reference_jp.txt  reference_zh.txt
characters/rice_shower/: config.json  reference_jp.txt  reference_zh.txt
characters/satono_diamond/: config.json  reference_jp.txt  reference_zh.txt
characters/seiun_sky/: config.json  prompt.md  reference_jp.txt  reference_zh.txt
characters/silence_suzuka/: config.json  reference_jp.txt  reference_zh.txt
characters/smart_falcon/: config.json  prompt.md  reference_jp.txt  reference_zh.txt
characters/special_week/: config.json  reference_jp.txt  reference_zh.txt
characters/still_in_love/: config.json  reference_jp.txt  reference_zh.txt
characters/tokai_teio/: config.json  reference_jp.txt  reference_zh.txt
characters/vivlos/: config.json  reference_jp.txt
characters/win_variation/: config.json  reference_jp.txt
docs/: audio_process.md  dialogue_architecture.md  director_mode_v1.md  tts_pipeline.md
frontend/: .env.template  README.md  index.html  package.json  vite.config.js
frontend/docs/: I18N.md
frontend/src/: App.vue
scenes/: city_park_afternoon.json  racecourse_race_day.json  riverside_sunset.json  tracen_classroom_after_school.json  tracen_training_ground_evening.json
scripts/: check_status.py  rebuild_vectorstore.py
src/umamusume_agent/: config.py
tests/: test_LLM.py  test_bing.py  test_character_manager.py  test_client.py  test_dialogue_context.py  test_dialogue_history.py  test_dialogue_json_protocol.py  test_dialogue_routes.py  test_director_foundation.py  test_director_routes.py  test_director_service.py  test_google.py  test_tts.py  test_tts_jobs.py  test_tts_mcp_client.py  test_tts_mcp_tool.py
(+46 files in other folders)
