[project]
name = "umamusume_agent"
version = "0.2.0"
description = "An AI agent for interactive voice-based Umamusume character roleplay."
readme = "README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
    "fastapi>=0.115.6",
    "mcp==1.10.1",
    "openai==1.75.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.4",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
langchain-mcp = [
    "langchain==0.3.25",
    "langchain-core==0.3.59",
    "langchain-mcp-adapters==0.1.8",
    "langchain-openai==0.3.5",
    "langgraph==0.3.31",
]
local-tts = [
    "torch==2.3.1",
    "torchaudio==2.3.1",
]



[tool.setuptools.packages.find]
where = ["src"] 

[tool.setuptools.package-dir]
"" = "src" 

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
